--- a/featureshow/org-mode-teaser.org
+++ b/featureshow/org-mode-teaser.org
@@ -1125,12 +1125,13 @@ Greek characters \alpha \beta \phi \LaTeX{}  $\varphi$
   - see properties drawer above
   - EXPORT_OPTIONS: see [[http://orgmode.org/manual/Export-options.html][docu]]
 
-** Mobile-org ([[http://orgmode.org/org.html#MobileOrg][docu]])
+** MobileOrg ([[http://orgmode.org/org.html#MobileOrg][docu]])
 
 - great [[http://mobileorg.ncogni.to/][iOS app]]
   - no iOS on my side
-- "advanced-beta" of [[http://wiki.github.com/matburt/mobileorg-android/][Android app]]
-  - Dropbox, ssh, scp, WEBDAV, gpg encryption, ...
+  - does not seem to be maintained any more :-(
+- [[http://wiki.github.com/matburt/mobileorg-android/][Android app]]
+  - sync via Dropbox, ssh, scp, WEBDAV, gpg encryption, ...
 
 #+BEGIN_SRC emacs-lisp
 ;;; http://orgmode.org/org.html#MobileOrg
@@ -1141,6 +1142,9 @@ Greek characters \alpha \beta \phi \LaTeX{}  $\varphi$
 (setq org-mobile-force-id-on-agenda-items nil)
 '(org-mobile-files (quote ("~/share/all/org-mode/contacts.org" "~/data/share/all/org-mode/hardware.org" )))
 #+END_SRC
+
+- http://www.orgzly.com/ (since approx. 2015-01)
+  - promising new app
 
 ** many many many many more features!
 
